Change Main Services header color from red to green

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 </div>
 <!-- Dk Result Style Section END -->
 
-        <h2 style="font-weight: bold; color: red;">Main Services</h2>
+        <h2 style="font-weight: bold; color: green;">Main Services</h2>
         
         <!-- Yahan se Services Grid Shuru -->
         <div class="services-grid">
