Add link for toilet application in index.html

--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
             <li><a href="https://myaadhaar.uidai.gov.in/check-aadhaar-validity/en"target="_blank">आधार कार्ड में मोबाइल नंबर चेक करे </a></li>
             <li><a href="https://mocrefund.crcs.gov.in/depositor/#/depositor/register"target="_blank">SAHARA REFUND PORTAL </a></li>
             <li><a href="https://echallan.parivahan.gov.in/index/accused-challan"target="_blank">ऑनलाइन चालान चेक करे </a></li>
+            <li><a href="https://sbm.gov.in/sbm_dbt/secure/login.aspx"target="_blank">शौचालय आवेदन </a></li>
         </ul>
         <div class="view-more"><a href="#">View More »</a></div>
     </div>
