--- a/pdf-editor.html
+++ b/pdf-editor.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Table</title>
+    <title>My Customer</title>
     <!-- CSS फाइल को लिंक करना न भूलें -->
 </head>
 <body>
+    <div style="margin-bottom: 20px;">
+    <input type="text" id="New Custmer Name" placeholder="Customer Name">
+    <input type="text" id="Mobile Number" placeholder="Mobile Number">
+    <button onclick="addCustomer()">Add Customer</button>
+</div>
     <table border="1">
         <thead>
             <tr>
                 <th>Sl</th>
-                <th>Name</th>
+                <th>Customer Name</th>
                 <th>Husband Name</th>
             </tr>
         </thead>
