--- a/pdf-editor.html
+++ b/pdf-editor.html
@@ -8,6 +8,7 @@
 <body>
     <div style="margin-bottom: 20px;">
     <input type="text" id="New Custmer Name" placeholder="Customer Name">
+    <input type="text" id="Father Name" placeholder="Father Name">
     <input type="text" id="Mobile Number" placeholder="Mobile Number">
     <button onclick="addCustomer()">Add Customer</button>
 </div>
