--- a/pdf-editor.html
+++ b/pdf-editor.html
@@ -13,7 +13,7 @@
         <button onclick="addPerson()">Add Customer</button>
     </div>
 
-    <table border="1">
+    <table border="1" style="with:100%; text-align:center; border-collapse;">
         <thead>
             <tr>
                 <th>Sl</th>
