--- a/pdf-editor.html
+++ b/pdf-editor.html
@@ -15,7 +15,7 @@
 
     <table border="1" style="width:100%; text-align:center; border-collapse:collapse;">
         <thead>
-            <tr>
+            <tr background:linear-gradient(45deg,#1e3c72,#2a5298); color:white;>
                 <th>Sl</th>
                 <th>Customer Name</th>
                 <th>Father Name</th>
