--- a/pdf-editor.html
+++ b/pdf-editor.html
@@ -14,7 +14,7 @@
         <button onclick="clearList()" style="background-color: red; color: white;">Clear List</button>
     </div>
 
-    <table border="1" id="customerTable">
+    <table border="1" id="customerTable" style="width:100%; text-align:center; border-collapse:collapse;">
         <thead>
             <tr style="background-color: yellow;"> <!-- आपका रंग भी लगा दिया -->
                 <th>Sl</th>
