--- a/pdf-editor.html
+++ b/pdf-editor.html
@@ -16,7 +16,7 @@
 
     <table border="1" id="customerTable" style="width:100%; text-align:center; border-collapse:collapse;">
         <thead>
-            <tr style="background: linear-gradient(to right,#ff416c,#ff4b2b);> <!-- आपका रंग भी लगा दिया -->
+            <tr style="background: linear-gradient(to right,#ff416c,#ff4b2b);"> <!-- आपका रंग भी लगा दिया -->
                 <th>Sl</th>
                 <th>Customer Name</th>
                 <th>Husband Name</th>
