--- a/pdf-editor.html
+++ b/pdf-editor.html
@@ -7,7 +7,7 @@
 <body>
     <div style="margin-bottom: 20px;">
         <input type="text" id="newName" placeholder="Customer Name">
-        <input type="text" id="newHusband" placeholder="Husband Name">
+        <input type="text" id="newHusband" placeholder="Father Name">
         <input type="text" id="newMobile" placeholder="Mobile Number">
         <button onclick="addPerson()">Add Customer</button>
         <!-- लिस्ट को खाली करने का बटन भी दिया है -->
