--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
         .rang-photo { background: linear-gradient(135deg, #75F505, #CB356B); }
         .rang-pdfeditor { background: linear-gradient(135deg, #8E2DE2, #CB356B); }
         .rang-id { background: linear-gradient(135deg, #F00A5E, #4A00E0); }
+        .rang-age { background: linear-gradient(135deg, #4A00E0, #1201F9); }
 
 
 
@@ -423,6 +424,13 @@
                 <div class="card rang-id">
                     <h3>ID card print</h3>
                     <p>Id card Print.</p>
+                </div>
+            </a>
+            <!-- 17. Age Calculatior -->
+            <a href="age.html"target="_blank"style="text-decoration: none;">
+                <div class="card rang-age">
+                    <h3>Age Calculator</h3>
+                    <p>Age Calculator.</p>
                 </div>
             </a>
         </div> <!-- Services Grid Khatam -->
