--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         .rang-photo { background: linear-gradient(135deg, #75F505, #CB356B); }
         .rang-pdfeditor { background: linear-gradient(135deg, #8E2DE2, #CB356B); }
         .rang-id { background: linear-gradient(135deg, #F00A5E, #4A00E0); }
-        .rang-age { background: linear-gradient(135deg, #4A00E0, #1201F9); }
+        .rang-age { background: linear-gradient(135deg, #0EECE5, #1201F9); }
 
 
 
