--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
              <!-- 17. PDFEDITOR -->
             <a href="pdf-editor.html"target="_blank"style="text-decoration: none;">
                 <div class="card rang-pdfeditor">
-                    <h3> PDF Editor</h3>
-                    <p>PDFEDITOR.</p>
+                    <h3> Data Base Entry</h3>
+                    <p>Personal Data.</p>
                 </div>
             </a>
             <!-- 17. Id card Print -->
