--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
     <div style="background-color: #0000ff; color: #ffffff; padding: 12px; margin: 10px auto; width: 95%; max-width: 1000px; border-radius: 8px; border: 2px solid #ffffff; box-shadow: 0 4px 8px rgba(0,0,0,0.5);">
         <marquee behavior="scroll" direction="left" scrollamount="10" style="font-size: 18px; font-weight: bold;">
-             💐💐💐 आप सभी क्षेत्रवासियों को नव वर्ष 2026 की हार्दिक शुभकामनाएं एवं बधाई 💐💐💐.
+             💐💐💐 आप सभी देशवासियों को 77वें गणतंत्र दिवस 2026 की हार्दिक शुभकामनाएं एवं बधाई 💐💐💐.
         </marquee>
     </div>
 
