--- a/index.html
+++ b/index.html
@@ -294,6 +294,10 @@
             <li><a href="https://mocrefund.crcs.gov.in/depositor/#/depositor/register"target="_blank">SAHARA REFUND PORTAL </a></li>
             <li><a href="https://echallan.parivahan.gov.in/index/accused-challan"target="_blank">ऑनलाइन चालान चेक करे </a></li>
             <li><a href="https://sbm.gov.in/sbm_dbt/secure/login.aspx"target="_blank">शौचालय आवेदन </a></li>
+            <li><a href="https://upfr.agristack.gov.in/farmer-registry-up/#/"target="_blank">किसान पंजीकरण</a></li>
+            <li><a href="https://cctnsup.gov.in/citizenportal/Login.aspx"target="_blank">चरित्र प्रमाणपत्र अनुरोध</a></li>
+            <li><a href="https://bor.up.nic.in/"target="_blank">राजस्व परिषद उत्तर प्रदेश</a></li>
+            <li><a href="https://miuponline.in/"target="_blank">free Boaring</a></li>
         </ul>
         <div class="view-more"><a href="#">View More »</a></div>
     </div>
