--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             margin: 0; 
             color: #ffffff;
             font-family: 'Poppins', sans-serif;
-            font-size: 42px;
+            font-size: 6vw;
             font-weight: 800;
             text-transform: uppercase;
             letter-spacing: 2px;
