--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
             margin: 0; 
             color: #ffffff;
             font-family: 'Poppins', sans-serif;
-            font-size: 6vw;
+            font-size: 42px;
             font-weight: 800;
             text-transform: uppercase;
             letter-spacing: 2px;
             text-shadow: 3px 3px 0px #000000;
+        }
+        @media only screen and (max-width:600px) 
+        { h1 {
+            font-size:24px;}
         }
 
         header p {
